--- a/html/index.html
+++ b/html/index.html
@@ -179,7 +179,7 @@
             one-to-one customer service with robust ideas.
           </p>
           <!-- Cách chia 1 -->
-          <div class="grid wide">
+          <!-- <div class="grid wide">
             <div class="row">
               <div class="col col-4">
                 <div class="blog-container">
@@ -197,7 +197,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Cách chia 2 -->
           <div class="blog-iteams">
             <div class="blog-container">
